fix bug 220390 ACCESSKEY incorrectly supported on multiline SELECT tag. patched by Nian Liu (neo.liu@sun.com). r=aaronleventhal sr=jst